--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,40 @@
+# Byte-compiled / optimized / DLL files
 *.pyc
-*.tmp
-*.log
-*.env
+*.pyo
+*.pyd
 __pycache__/
-/media/menu.psd
-test.py
-.venv/
 
+# Logs and temp files
+*.log
+*.tmp
+
+# Virtual environment
+.venv/
+venv/
+
+# dotenv
+*.env
+
+# System files
 .DS_Store
 Thumbs.db
+
+# PyCharm
+.idea/
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Editor backups
+*.swp
+*.swo
+
+# Local PSDs or design files
+/media/menu.psd
+
+# Test outputs
+*.coverage
+htmlcov/
+coverage.xml
